Title and style changes

--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ body {
 
 .budget__income {
     margin-bottom: 10px;
-    background-color: #28B9B5;
+    background-color: #66bfbf;
 }
 
 .budget__expenses {
-    background-color: #FF5049;
+    background-color: #fe7171;
 }
 
 .budget__income--text,
